main.css
.wrapper-for-flex {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;

  -webkit-flex-flow: row;
  flex-flow: row;
}

@media all and (max-width: 660px) {
  .wrapper-for-flex {
    flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
  }
}

html, body, .page-header, .page-footer {
  padding: 0;
  margin: 0;
}

.page-header {
  background-color: #2B6891;
  text-align: center;
  color: white;
  font-family: 'Roboto', sans-serif;
  height: 100px;
}

h1 {
  margin: 0;
  padding: 20px;
}

h2 {
  color: #1975D1;
  font-family: 'Roboto', sans-serif;
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 0;
}

h3 {
  color: #1975D1;
  font-family: 'Roboto', sans-serif;
  padding: 0;
  margin-bottom: 5px;
}

.about-me-side {
  padding-left: 5%;
  -webkit-flex: 3 1 55%;
  flex: 3 1 55;
  -webkit-order: 1;
  order: 1;
}

p {
  color: #3176a5;
  font-family: 'Roboto', sans-serif;
}

ul {
  list-style: none;
  margin-top: 0;
  padding-top: 0;
  padding-left: 15px;
}

li {
  color: #3176a5;
  font-family: 'Roboto', sans-serif;
  padding: 2px;
}

img {
  height: auto;
  max-height: 250px;
  width: auto;
}

main {
  background-color: #EEEEEE;
  -webkit-flex: 1 6 45%;
  flex: 1 6 45%;
  -webkit-order: 2;
  order: 2;
}

summary {
  background-color:#99B92C;
  color:white;
  font-family: 'Roboto', sans-serif;
  padding-left: 5%;
  padding-top: 15px;
  padding-bottom: 15px;
  cursor:pointer;
  font-weight:bold;
  border-bottom: 1px solid white;
}

details details summary {
  background-color: #53C1E6;
  margin-left: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: 1px solid white;
}

.justify {
  border-top: 1px solid white;
}

.page-footer {
  background-color: #2B6891;
  text-align: center;
  font-family: 'Roboto', sans-serif;
}

.page-footer > p {
  color: white;
  margin: 0;
  padding: 10px;
}

